# ClipScript

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: development.md  script-format.md  tts.md
docs/uk/: quickstart.md
examples/assets/: clipscript-sample.ppm
examples/scripts/: app-demo.json  chat-only.json  chat-timeline-v2.json  image-scene.json  legacy-v0.json  offline-smoke.json
examples/templates/: default.json
src/clipscript/: __init__.py  cli.py  commands.py  engine.py  media.py  models.py  project.py  renderers.py  subtitles.py  timeline.py  tts.py
tests/: test_cli_and_render.py  test_config.py  test_packaging_metadata.py  test_registries_and_tts.py  test_schema.py  test_v2_features.py
